# route4me-c-sdk

./: .travis.yml  CMakeLists.txt  README.md
examples/: AddAddressToOptimization  AddAvoidanceZone  AddConfig  AddConfig.c  AddOptimization  AddOptimization.c  AddRouteNotes  AddRouteNotes.c  AddTerritory  AssetTracking  AssetTracking.c  AuthenticateUser  BatchGeocoder  DeleteRoute  DuplicateRoute  DuplicateRoute.c  GetActivityByType  GetActivityByType.c  GetAddress  GetAddress.c  GetAllActivities  GetAllOrders  GetAllOrders.c  GetAllStreets  GetAllStreets.c  GetAllUsers  GetAllUsers.c  GetAvoidanceZone  GetConfig  GetContacts  GetOptimization  GetOptimizations  GetOptimizations.c  GetOrder  GetRouteById  GetRouteByPath  GetRouteByPath.c  GetRouteDirections  GetRouteNotes  GetRouteQuery  (+40 more)
include/: route4me.h
include/json-c/: config.h
lib/cmocka/: libcmocka.so.0.4.0
src/: CMakeLists.txt  json_deserialize.c  request.c  route4me.c  string_utils.c
src/jsonc/: json.c
test/: ActivitiesTest.c  AddAddressToOptimization.c  AddAvoidanceZone.c  AddTerritory.c  AddressBookTest.c  AuthenticateUser.c  AvoidanceZonesTest.c  BatchGeocoder.c  CMakeLists.txt  ConfigTest.c  DeleteRoute.c  DuplicateRoute.c  GPSTest.c  GeocoderTest.c  GetAllActivities.c  GetAvoidanceZone.c  GetConfig.c  GetContacts.c  GetOptimization.c  GetOrder.c  GetRouteById.c  GetRouteDirections.c  GetRoutes.c  GetStreetAddress.c  GetTerritory.c  LogActivity.c  MultipleDepotMultipleDriverTimeWindow.c  NotesTest.c  OptimizationTest.c  OrdersTest.c  RemoveAddressFromOptimization.c  RemoveTerritory.c  ReverseGeocoder.c  RouteTest.c  SessionTest.c  SetGps.c  SingleDriverRoundTrip.c  StreetsTest.c  StringUtilsTest.c  TerritoriesTest.c  (+2 more)
