CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Setting up project
PROJECT(CROUTE4ME)
set (CROUTE4ME_VERSION_MAJOR 1)
set (CROUTE4ME_VERSION_MINOR 0)

# Checking for dependencies
FIND_PACKAGE(CURL REQUIRED)

# Set up include pathes
set(JSON_C_DIR ${CROUTE4ME_SOURCE_DIR}/include/json-c)
set(JSON_C_LIBRARY ${CROUTE4ME_SOURCE_DIR}/lib/json-c)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CROUTE4ME_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${JSON_C_DIR})

# Set up output paths
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

# Set up source directories
ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(test test)
